--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -25,7 +25,7 @@ layout: default
   <h1 class="text-center text-stone-800 text-3xl md:text-4xl lg:text-5xl font-bold mb-4 md:mb-8">
     {{ page.title }}
   </h1>
-  <div class="grid justify-items-stretch gap-4 grid-cols-1 ss:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+  <div class="grid justify-items-stretch gap-4 md:gap-8 grid-cols-1 xs:grid-cols-2 sm:grid-cols-3 md:grid-cols-4">
     {% for tag in sorted_tags %}
       <a class="justify-self-start py-1 px-3 text-2xl font-codepro rounded shadow-lg bg-stone-300 text-stone-800 hover:bg-sky-200 hover:text-sky-800 transition duration-300 ease-in-out" href="/tags/{{ tag | slugify }}">{{ tag }}</a>
     {% endfor %}
