feat(og-image-ratio): test aspect ratio for open graph

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: "CallMarx.dev"
+main_image: /assets/images/eu.webp
 image: /assets/images/eu.webp
 description: >-
   Desenvolvedor, nerd, disléxico, linux fanboy, viciado/hipster em café e
